--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Lucas Clemente Vella <lvella@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+arrayvec = "0.7.1"
 bitvec = "0.22.3"
 delegate = "0.6.1"
 iced = {version = "0.3", features = ["svg", "tokio"]}
