Fixed bug and preliminary deterministic random seed support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,14 @@ edition = "2018"
 arrayvec = "0.7.1"
 bitvec = "0.22.3"
 delegate = "0.6.1"
+getrandom = "0.2.3"
+hex = "0.4.3"
 iced = {version = "0.3", features = ["svg", "tokio"]}
 iced_native = "0.4"
 itertools = "0.10.1"
 rand = "0.8.4"
+rand_core = "0.6.3"
+rand_xoshiro = "0.6.0"
 strum = "0.21"
 strum_macros = "0.21"
 
