--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "non-deterministic-minesweeper"
-version = "0.2.0"
+name = "mineswapper"
+version = "1.0.0"
 authors = ["Lucas Clemente Vella <lvella@gmail.com>"]
 edition = "2021"
 
